# routes/user.js
@@ -141,14 +141,14 @@ router.post("/search", authenticateToken, async (req, res) => {
 
 router.get("/profile", authenticateToken, async (req, res) => {
     try {
-        const userId = req.query.user_id; // ID của người cần xem
+        const userId = req.query.userId; // ID của người cần xem
         const currentUserId = req.query.currentUserId; // ID của người đang đăng nhập
 
         if (!userId || !currentUserId) {
             return res.status(400).send({
                 isSuccess: false,
                 status: 400,
-                message: "Thiếu user_id hoặc currentUserId",
+                message: "Thiếu userId hoặc currentUserId",
             });
         }
 
